# CrosswordGenerator

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  todo.md
data/: config.ini  dicoClean.txt  styles.qss
include/: backtrackingalgorithm.hpp  cell.hpp  crosswordcell.hpp  crosswordcellwidget.hpp  crosswordmanager.hpp  databasegenerationinterface.hpp  databasemanager.hpp  gameinterface.hpp  gridgenerationinterface.hpp  gridgenerator.hpp  gridmanager.hpp  gridworker.hpp  isolvingalgorithmstrategy.hpp  iwordselectionstrategy.hpp  leastwordcountselection.hpp  logger.hpp  mainwindow.hpp  solvingalgorithmfactory.hpp  wordselectionfactory.hpp  wordtree.hpp
src/: backtrackingalgorithm.cpp  crosswordcell.cpp  crosswordcellwidget.cpp  crosswordmanager.cpp  databasegenerationinterface.cpp  databasemanager.cpp  gameinterface.cpp  gridgenerationinterface.cpp  gridgenerator.cpp  gridmanager.cpp  gridworker.cpp  leastwordcountselection.cpp  logger.cpp  main.cpp  mainwindow.cpp  solvingalgorithmfactory.cpp  wordselectionfactory.cpp  wordtree.cpp
tools/dicoCleaner/: clean_dictionary.py
